2004-02-25  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Clean up option parsing in fuse_main()

2004-02-20  Miklos Szeredi <mszeredi@inf.bme.hu>

	* removed old way of mounting (fusermount mountpoint program)

	* more kernel interface changes:

	* added nanosecond precision to file times

	* removed interface version from mount data

	* added /proc/fs/fuse/version which contains MAJOR.MINOR

2004-02-19  Miklos Szeredi <mszeredi@inf.bme.hu>

	* statfs library API changed to match other methods.  Since this
	  is not backward compatible FUSE_MAJOR_VERSION is changed to 2

	* kernel interface changes follow:

	* statfs changed to 64 bits, added 'bavail' field

	* add generation number to lookup result

	* optimized mknod/mkdir/symlink/link (no separate lookup is
	needed)

	* rdev size increased to 32 bits for mknod

	* kernel interface version changed to 3.1
	
2004-02-18  Miklos Szeredi <mszeredi@inf.bme.hu>

	* user-mount upgraded for 2.6.3 kernel
	
2004-02-17  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added user-mount.2.6.2-rc3.patch

	* Add FS_SAFE flag to fuse filesystem

	* fusermount should allow (un)mounting for non-root even if not
	suid-root
	
2004-02-12  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Remove MS_PERMISSION mount flag (that means something else now)
	
2004-02-10  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added check for i_size_read/write functions to configure.in
	(patch by Valient Gough)

2004-02-06  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fixed writing >= 2G files

	* Check file size on open (with generic_file_open())

	* Readpage calls flush_dcache_page() after storing data

	* Use i_size_read/write for accessing inode->i_size

	* Make loopback mount of a fuse file work
	
2004-02-04  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Released 1.1
	
2004-01-29  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Properly check if the inode exists in fuse_invalidate
	
2004-01-27  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added -q option for fusermount
