@@ -17,6 +17,11 @@
 
 static struct fuse *fuse;
 
+struct fuse *fuse_get(void)
+{
+    return fuse;
+}
+
 static void usage(char *progname)
 {
     fprintf(stderr,
